[build-system]
requires = [
    "setuptools >= 40.6.2",
    "wheel >= 0.30.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py35', 'py36', 'py37', 'py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.env
  | \.venv
  | _build
  | build
  | dist
)/
'''